# HsEngine

./: .gitmodules  BuildShaders.bat  CMakeCommon.cmake  CMakeLists.txt  CompileShaders.bat  cmake-ninja.bat
Engine/include/: Config.h  Engine.h  EngineMain.h
Engine/include/Common/: Assert.h  Logging.h  Pointers.h  Types.h  Util.h  hs_Assert.h
Engine/include/Containers/: Array.h  Hash.h  HashMap.h  Pair.h  Span.h  TemplateUtil.h  WorkStealingDequeue.h
Engine/include/Game/: DebugShapeRenderer.h  DrawCanvas.h  GameBase.h  SpriteRenderer.h
Engine/include/Gui/: Font.h  GuiRenderer.h  Text.h
Engine/include/Input/: Input.h
Engine/include/Math/: Math.h  hs_Math.h
Engine/include/Platform/: hs_Windows.h
Engine/include/Render/: Allocator.h  Buffer.h  Material.h  Render.h  RenderBufferCache.h  RenderBufferEntry.h  RenderPassContext.h  Shader.h  ShaderManager.h  Texture.h  TinyGltf.h  Types.h  VertexBuffer.h  VertexTypes.h
Engine/include/Resources/: ResourceManager.h  Serialization.h
Engine/include/String/: String.h  StringUtil.h
Engine/include/System/: Atomic.h  Memory.h
Engine/include/Threading/: Atomic.h  JobSystem.h  Thread.h
Engine/include/World/: Camera.h  World.h
Engine/src/: Engine.cpp  EngineMain.cpp
Engine/src/Common/: Logging.cpp
Engine/src/Containers/: HashMap.cpp
Engine/src/Game/: DebugShapeRenderer.cpp  DrawCanvas.cpp  SpriteRenderer.cpp
Engine/src/Gui/: Font.cpp  GuiRenderer.cpp  Text.cpp
Engine/src/Input/: Input.cpp
Engine/src/Render/: Buffer.cpp  DynamicUniformBuffer.cpp  Image.cpp  Material.cpp  Render.cpp  RenderBufferCache.cpp  ShaderManager.cpp  Texture.cpp  TinyGltfImpl.cpp  VertexBuffer.cpp
Engine/src/Resources/: ResourceManager.cpp  Serialization.cpp
Engine/src/String/: String.cpp
Engine/src/System/: Memory.cpp
Engine/src/Threading/: JobSystem.cpp
Engine/src/World/: Camera.cpp
Shaders/: GuiCommon.h  Gui_fs.hlsl  Gui_vs.hlsl  PBR_fs.hlsl  PBR_vs.hlsl  Phong_fs.hlsl  Phong_vs.hlsl  Shape_fs.hlsl  Shape_vs.hlsl  Skybox_fs.hlsl  Skybox_vs.hlsl  Sprite_fs.hlsl  Sprite_vs.hlsl  Triangle_fs.hlsl
Shaders/ShaderStructs/: Common.h
UnitTests/Data/: README.md
UnitTests/include/: TestContainersCommon.h  UnitTests.h
UnitTests/src/: ArrayTest.cpp  AtomicTest.cpp  HashMapTest.cpp  JobSystemTest.cpp  ThreadTest.cpp  UnitTests.cpp  WorkStealingDequeueTest.cpp  main.cpp
